fixed title on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* // mobile first */
 body{
     font-family: 'Kanit', sans-serif;
     color: white;
@@ -11,16 +12,16 @@ body{
     display: flex;
 
 }
-
+#home-page-div{
+    margin-top: 30%;
+}
 img{
     max-height: 350px;
     max-width: auto;
 }
-
 #quizDiv{
     color: black;
 }
-
 .btn{
     background-color: black;
     margin-left: 1%;
@@ -28,4 +29,12 @@ img{
 .btn:hover{
     background-color: white;
     color: black;
+}
+
+/* for desktop */
+@media only screen and (min-width: 768px) {
+    #home-page-div{
+        margin-top: 5%;
+    }
+    
 }
